syntax = "proto3";

package helloworld;

option java_package = "com.nmq.grpc.helloworld";
option java_outer_classname = "HelloWorldProto";
option java_multiple_files = true;

service Greeter {
    // Seneds a greeting
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
    rpc StreamResponse(HelloRequest) returns (stream HelloResponse) {}
    // Client-streaming example
    rpc ClientStreaming(stream HelloRequest) returns (HelloResponse){}
    // Bidirectional-streaming
    rpc BidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest{
    string name = 1;
}

message HelloResponse {
    string message = 1;
}
